# openmc_weight_window_generator

./: .gitignore  CITATION.cff  README.md  pyproject.toml  setup.cfg
examples/: cylinder_mesh_example.py  generate_iterative_weight_windows.ipynb
examples/no_ww_example/: no_ww_example.py
examples/ww_example/: minimal_ww_example.py
examples/ww_example/generate_ww/: minimal_ww_generate_ww.py
openmc_weight_window_generator/: __init__.py  core.py
