[metadata]
name = openmc_weight_window_generator
version = attr: openmc_weight_window_generator.__version__
author = The openmc_weight_window_generator Development Team
author_email = mail@jshimwell.com
description = Generate weight windows for using in OpenMC simulation with varience reduction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fusion-energy/openmc_weight_window_generator
license = MIT
license_file = LICENSE.txt
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/fusion-energy/openmc_weight_window_generator
    Tracker = https://github.com/fusion-energy/openmc_weight_window_generator/issues

[options]
# package_dir=
#     =src
packages = find:
python_requires= >=3.6
install_requires=
    numpy >= 1.21.1

[options.extras_require]
tests = 
    pytest >= 5.4.3
